# data_observatory_test_062025

./: LICENSE  Makefile  README.md  pyproject.toml
data/raw/: datos_viviendas_censo.csv
data_observatory_test_062025/: __init__.py  dataset.py  features.py  generic_eda_report.py  load_data_viviendas.py  plots.py
data_observatory_test_062025/modeling/: predict.py  train.py
notebooks/: 0.01-fnc-initial-eda.ipynb  0.02-fnc-pregunta-2.ipynb  0.03-fnc-pregunta3.ipynb
notebooks/Pregunta 3 Fallida/: 0.03-fnc-pregunta3(failure).ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
notebooks/script/: 0.01-fnc-initial-eda.py  0.02-fnc-pregunta-2.py  0.03-fnc-pregunta3(failure).py  0.03-fnc-pregunta3-Copy1.py  0.03-fnc-pregunta3.py
references/: Prueba_datascientist.html
