[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_observatory_test_062025"
version = "0.0.1"
description = "A data science project for the data scientist position in Data Observatory."
authors = [
  { name = "Felipe Cabello" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["data_observatory_test_062025"]
include = ["pyproject.toml", "data_observatory_test_062025/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["data_observatory_test_062025"]
force-sort-within-sections = true

