[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_observatory_test_062025"
version = "0.0.1"
description = "A data science project for the data scientist position in Data Observatory."
authors = [
  { name = "Felipe Cabello" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "jupyterlab>=4.4.3",
    "loguru",
    "nbautoexport>=0.5.2",
    "pandas>=2.3.0",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"

[tool.pyright]
venvPath='.'
venv=".venv"
exclude=['.venv']

[tool.ruff]
line-length = 88
src = ["data_observatory_test_062025"]
include = ["pyproject.toml", "data_observatory_test_062025/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["data_observatory_test_062025"]
force-sort-within-sections = true

